chg: fix for align-center image

--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,10 @@
 	opacity: initial;
 }
 
-
+/* Image Styles */ 
 .imageMediaStyle{
   padding-bottom: 20px;
+}
+div.align-center {
+  width: fit-content;
 }
